--- a/WarpRandomizerTracker.csproj
+++ b/WarpRandomizerTracker.csproj
@@ -69,6 +69,7 @@
     <TypeScriptSourceRoot />
   </PropertyGroup>
   <ItemGroup>
+    <Content Include="images\celestic.png" />
     <Content Include="package-lock.json" />
     <Content Include="package.json" />
     <None Include="packages.config" />
@@ -88,7 +89,7 @@
   </ItemGroup>
   <ItemGroup>
     <TypeScriptCompile Include="main.ts" />
-    <TypeScriptCompile Include="Map.ts" />
+    <TypeScriptCompile Include="map.ts" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
