--- a/WarpRandomizerTracker.csproj
+++ b/WarpRandomizerTracker.csproj
@@ -74,7 +74,7 @@
     <Content Include="package.json" />
     <None Include="packages.config" />
     <None Include="README.md" />
-    <Content Include="test.json" />
+    <Content Include="worlds\test.json" />
     <Content Include="tsconfig.json" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
