--- a/WarpRandomizerTracker.csproj
+++ b/WarpRandomizerTracker.csproj
@@ -70,8 +70,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Content Include="images\celestic.png" />
+    <Content Include="import\import.txt" />
     <Content Include="package-lock.json" />
     <Content Include="package.json" />
+    <Content Include="import\input.json" />
     <None Include="packages.config" />
     <None Include="README.md" />
     <Content Include="worlds\test.json" />
@@ -82,6 +84,7 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+    <Content Include="worlds\sinnoh.json" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="main.css" />
@@ -89,6 +92,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <TypeScriptCompile Include="import\import.ts" />
     <TypeScriptCompile Include="main.ts" />
     <TypeScriptCompile Include="map.ts" />
   </ItemGroup>
