--- a/WarpRandomizerTracker.csproj
+++ b/WarpRandomizerTracker.csproj
@@ -77,18 +77,21 @@
     <Content Include="images\hgss\cerulean.png" />
     <Content Include="images\hgss\ceruleancave.png" />
     <Content Include="images\hgss\cianwood.png" />
+    <Content Include="images\hgss\darkcave.png" />
     <Content Include="images\hgss\ecruteak.png" />
     <Content Include="images\hgss\fuschia.png" />
     <Content Include="images\hgss\goldenrod.png" />
     <Content Include="images\hgss\lavender.png" />
     <Content Include="images\hgss\mahogany.png" />
     <Content Include="images\hgss\moon.png" />
+    <Content Include="images\hgss\mtmortar.png" />
     <Content Include="images\hgss\olivine.png" />
     <Content Include="images\hgss\pewter.png" />
     <Content Include="images\hgss\r41.png" />
     <Content Include="images\hgss\r47.png" />
     <Content Include="images\hgss\saffron.png" />
     <Content Include="images\hgss\seafoam.png" />
+    <Content Include="images\hgss\unioncave.png" />
     <Content Include="images\hgss\vermillion.png" />
     <Content Include="images\hgss\victoryroad.png" />
     <Content Include="images\hgss\violet.png" />
@@ -137,6 +140,7 @@
     <Content Include="import\hgss\dept1.txt" />
     <Content Include="import\hgss\dept2.txt" />
     <Content Include="import\hgss\ecruteak.txt" />
+    <Content Include="import\hgss\frontier.txt" />
     <Content Include="import\hgss\fuschia.txt" />
     <Content Include="import\hgss\goldenrod.txt" />
     <Content Include="import\hgss\gyms.txt" />
@@ -148,11 +152,14 @@
     <Content Include="import\hgss\lighthouse.txt" />
     <Content Include="import\hgss\mahogany.txt" />
     <Content Include="import\hgss\moon.txt" />
+    <Content Include="import\hgss\mtmortar.txt" />
     <Content Include="import\hgss\mtsilver.txt" />
     <Content Include="import\hgss\olivine.txt" />
     <Content Include="import\hgss\pallet.txt" />
     <Content Include="import\hgss\pewter.txt" />
     <Content Include="import\hgss\pokeathalon.txt" />
+    <Content Include="import\hgss\pokecenters1.txt" />
+    <Content Include="import\hgss\pokecenters2.txt" />
     <Content Include="import\hgss\r26.txt" />
     <Content Include="import\hgss\r35.txt" />
     <Content Include="import\hgss\rage.txt" />
@@ -160,6 +167,7 @@
     <Content Include="import\hgss\safari.txt" />
     <Content Include="import\hgss\saffron.txt" />
     <Content Include="import\hgss\seafoam.txt" />
+    <Content Include="import\hgss\ssaqua.txt" />
     <Content Include="import\hgss\start.txt">
       <SubType>Code</SubType>
     </Content>
