--- a/WarpRandomizerTracker.csproj
+++ b/WarpRandomizerTracker.csproj
@@ -73,6 +73,7 @@
     <Content Include="package.json" />
     <None Include="packages.config" />
     <None Include="README.md" />
+    <Content Include="worlds\hoenn.json" />
     <None Include="worlds\johto.json" />
     <Content Include="worlds\test.json" />
     <Content Include="tsconfig.json" />
